--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <input class="display" placeholder="0" readonly>
             <div class="opers">
             <button class="reset">AC</button>
+            <button class="clear">CE</button>
             <button class="eq">=</button>
             <br>
             <button class="itemop">/</button>
